--- a/Apps/CarpoolingTECDriverAPP/app/src/main/res/values/strings.xml
+++ b/Apps/CarpoolingTECDriverAPP/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Carpooling TEC Driver APP</string>
+    <string name="title_activity_tabb">TabbActivity</string>
+    <string name="action_settings">Settings</string>
+    <string name="section_format">Hello World from section: %1$d</string>
 </resources>
